Fixed issue with history box button incorrectly aligned

--- a/src/site/shared/containers/ItemNav/index.scss
+++ b/src/site/shared/containers/ItemNav/index.scss
@@ -102,8 +102,9 @@ $tab-padding: 8px;
             display: flex;
             justify-content: center;
 
-            &:first-child > div {
+            &:first-child > button {
                 margin-right: auto;
+                margin-left: 5px;
             }
             &:last-child > div {
                 margin-left: auto;
